--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar bg-body-tertiary border-bottom">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <a class="navbar-brand d-flex align-items-center" href="#">
-                    <img src="assets/foto_Nicolas.jpg" alt="Logo" width="50" height="50" class="rounded-circle">
+                    <img src="assets/black mask.jpg" alt="Logo" width="50" height="50" class="rounded-circle">
                     <h4 class="mb-0 ms-3 fs-5">Nicolas Leonardo</h4>
                 </a>
                 <i class="fa-regular fa-bell fs-4"></i>
@@ -43,14 +43,21 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                <path d="M11.0996 9.37528H12.8246C13.2822 9.37528 13.7209 9.55702 14.0444 9.88054C14.368 10.204 14.5497 10.6428 14.5497 11.1003M11.0996 9.37528H9.37453C8.91702 9.37528 8.47824 9.55702 8.15473 9.88054C7.83122 10.204 7.64948 10.6428 7.64948 11.1003V11.6754C7.64948 12.1329 7.83122 12.5716 8.15473 12.8952C8.47824 13.2187 8.91702 13.4004 9.37453 13.4004H12.8246C13.2822 13.4004 13.7209 13.5822 14.0444 13.9057C14.368 14.2292 14.5497 14.668 14.5497 15.1255V15.7005C14.5497 16.158 14.368 16.5968 14.0444 16.9203C13.7209 17.2438 13.2822 17.4255 12.8246 17.4255H11.0996M11.0996 9.37528V7.65022M11.0996 17.4255H9.37453C8.91702 17.4255 8.47824 17.2438 8.15473 16.9203C7.83122 16.5968 7.64948 16.158 7.64948 15.7005M11.0996 17.4255V19.1506" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M12.2496 3.11333C10.1176 2.87512 7.96424 3.30527 6.08736 4.3443C4.21048 5.38333 2.70283 6.97989 1.77292 8.91316C0.843018 10.8464 0.536811 13.0209 0.896653 15.1358C1.2565 17.2507 2.2646 19.2015 3.78155 20.7184C5.2985 22.2354 7.24933 23.2435 9.36422 23.6033C11.4791 23.9632 13.6536 23.657 15.5868 22.7271C17.5201 21.7972 19.1167 20.2895 20.1557 18.4126C21.1947 16.5358 21.6249 14.3824 21.3867 12.2504M19.7249 0.75V8.80026M23.75 4.77513H15.6997" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
+                                fill="none">
+                                <path
+                                    d="M11.0996 9.37528H12.8246C13.2822 9.37528 13.7209 9.55702 14.0444 9.88054C14.368 10.204 14.5497 10.6428 14.5497 11.1003M11.0996 9.37528H9.37453C8.91702 9.37528 8.47824 9.55702 8.15473 9.88054C7.83122 10.204 7.64948 10.6428 7.64948 11.1003V11.6754C7.64948 12.1329 7.83122 12.5716 8.15473 12.8952C8.47824 13.2187 8.91702 13.4004 9.37453 13.4004H12.8246C13.2822 13.4004 13.7209 13.5822 14.0444 13.9057C14.368 14.2292 14.5497 14.668 14.5497 15.1255V15.7005C14.5497 16.158 14.368 16.5968 14.0444 16.9203C13.7209 17.2438 13.2822 17.4255 12.8246 17.4255H11.0996M11.0996 9.37528V7.65022M11.0996 17.4255H9.37453C8.91702 17.4255 8.47824 17.2438 8.15473 16.9203C7.83122 16.5968 7.64948 16.158 7.64948 15.7005M11.0996 17.4255V19.1506"
+                                    stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M12.2496 3.11333C10.1176 2.87512 7.96424 3.30527 6.08736 4.3443C4.21048 5.38333 2.70283 6.97989 1.77292 8.91316C0.843018 10.8464 0.536811 13.0209 0.896653 15.1358C1.2565 17.2507 2.2646 19.2015 3.78155 20.7184C5.2985 22.2354 7.24933 23.2435 9.36422 23.6033C11.4791 23.9632 13.6536 23.657 15.5868 22.7271C17.5201 21.7972 19.1167 20.2895 20.1557 18.4126C21.1947 16.5358 21.6249 14.3824 21.3867 12.2504M19.7249 0.75V8.80026M23.75 4.77513H15.6997"
+                                    stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
                         <div>
                             <h6 class="mb-0">Receitas</h6>
                             <p class="mb-0">Mês passado</p>
+                            <p>R$ 8,023.00</p>
+                            <p class="text-light-color">R$ 8,723.29</p>
                         </div>
                     </div>
                 </div>
@@ -58,15 +65,24 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 21" fill="none">
-                                <path d="M12.25 0.941667C11.6303 0.815167 10.9914 0.751278 10.3333 0.75C5.04046 0.75 0.75 5.04046 0.75 10.3333C0.75 15.6262 5.04046 19.9167 10.3333 19.9167C15.6262 19.9167 19.9167 15.6262 19.9167 10.3333C19.9154 9.67528 19.8515 9.03639 19.725 8.41667" stroke="black" stroke-width="1.5" stroke-linecap="round" />
-                                <path d="M10.3333 7.45833C9.27436 7.45833 8.41666 8.10233 8.41666 8.89583C8.41666 9.68933 9.27436 10.3333 10.3333 10.3333C11.3923 10.3333 12.25 10.9773 12.25 11.7708C12.25 12.5643 11.3923 13.2083 10.3333 13.2083M10.3333 7.45833C11.1671 7.45833 11.8782 7.85796 12.1407 8.41667M10.3333 7.45833V6.5M10.3333 13.2083C9.49957 13.2083 8.78849 12.8087 8.52591 12.25M10.3333 13.2083V14.1667" stroke="black" stroke-width="1.5" stroke-linecap="round" />
-                                <path d="M15.1231 5.54358L19.1251 1.53966M19.9147 5.04333L19.8017 2.08208C19.8017 1.38345 19.3848 0.948369 18.6248 0.893744L15.631 0.752869" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 21"
+                                fill="none">
+                                <path
+                                    d="M12.25 0.941667C11.6303 0.815167 10.9914 0.751278 10.3333 0.75C5.04046 0.75 0.75 5.04046 0.75 10.3333C0.75 15.6262 5.04046 19.9167 10.3333 19.9167C15.6262 19.9167 19.9167 15.6262 19.9167 10.3333C19.9154 9.67528 19.8515 9.03639 19.725 8.41667"
+                                    stroke="black" stroke-width="1.5" stroke-linecap="round" />
+                                <path
+                                    d="M10.3333 7.45833C9.27436 7.45833 8.41666 8.10233 8.41666 8.89583C8.41666 9.68933 9.27436 10.3333 10.3333 10.3333C11.3923 10.3333 12.25 10.9773 12.25 11.7708C12.25 12.5643 11.3923 13.2083 10.3333 13.2083M10.3333 7.45833C11.1671 7.45833 11.8782 7.85796 12.1407 8.41667M10.3333 7.45833V6.5M10.3333 13.2083C9.49957 13.2083 8.78849 12.8087 8.52591 12.25M10.3333 13.2083V14.1667"
+                                    stroke="black" stroke-width="1.5" stroke-linecap="round" />
+                                <path
+                                    d="M15.1231 5.54358L19.1251 1.53966M19.9147 5.04333L19.8017 2.08208C19.8017 1.38345 19.3848 0.948369 18.6248 0.893744L15.631 0.752869"
+                                    stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
                         <div>
                             <h6 class="mb-0">Despesas</h6>
                             <p class="mb-0">Mês passado</p>
+                            <p>R$ 5,480.00</p>
+                            <p class="text-light-color">R$ 5,736.59</p>
                         </div>
                     </div>
                 </div>
@@ -74,16 +90,25 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 17" fill="none">
-                                <path d="M4.58334 4.58334H8.41668" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                                <path d="M18.7983 5.54166H16.3047C14.5941 5.54166 13.2083 6.8287 13.2083 8.41666C13.2083 10.0046 14.5951 11.2917 16.3038 11.2917H18.7983C18.8788 11.2917 18.9181 11.2917 18.9516 11.2897C19.4691 11.2581 19.8812 10.8757 19.9148 10.3956C19.9167 10.3649 19.9167 10.3276 19.9167 10.2538V6.57953C19.9167 6.50574 19.9167 6.46837 19.9148 6.4377C19.8803 5.95757 19.4691 5.5752 18.9516 5.54357C18.9191 5.54166 18.8788 5.54166 18.7983 5.54166Z" stroke="black" stroke-width="1.5" />
-                                <path d="M18.9248 5.54167C18.85 3.74767 18.6105 2.6475 17.8352 1.87317C16.713 0.75 14.9055 0.75 11.2917 0.75H8.41667C4.80279 0.75 2.99537 0.75 1.87317 1.87317C0.750958 2.99633 0.75 4.80279 0.75 8.41667C0.75 12.0305 0.75 13.838 1.87317 14.9602C2.99633 16.0824 4.80279 16.0833 8.41667 16.0833H11.2917C14.9055 16.0833 16.713 16.0833 17.8352 14.9602C18.6105 14.1858 18.851 13.0857 18.9248 11.2917" stroke="black" stroke-width="1.5" />
-                                <path d="M16.0747 8.41666H16.0843" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 17"
+                                fill="none">
+                                <path d="M4.58334 4.58334H8.41668" stroke="black" stroke-width="1.5"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M18.7983 5.54166H16.3047C14.5941 5.54166 13.2083 6.8287 13.2083 8.41666C13.2083 10.0046 14.5951 11.2917 16.3038 11.2917H18.7983C18.8788 11.2917 18.9181 11.2917 18.9516 11.2897C19.4691 11.2581 19.8812 10.8757 19.9148 10.3956C19.9167 10.3649 19.9167 10.3276 19.9167 10.2538V6.57953C19.9167 6.50574 19.9167 6.46837 19.9148 6.4377C19.8803 5.95757 19.4691 5.5752 18.9516 5.54357C18.9191 5.54166 18.8788 5.54166 18.7983 5.54166Z"
+                                    stroke="black" stroke-width="1.5" />
+                                <path
+                                    d="M18.9248 5.54167C18.85 3.74767 18.6105 2.6475 17.8352 1.87317C16.713 0.75 14.9055 0.75 11.2917 0.75H8.41667C4.80279 0.75 2.99537 0.75 1.87317 1.87317C0.750958 2.99633 0.75 4.80279 0.75 8.41667C0.75 12.0305 0.75 13.838 1.87317 14.9602C2.99633 16.0824 4.80279 16.0833 8.41667 16.0833H11.2917C14.9055 16.0833 16.713 16.0833 17.8352 14.9602C18.6105 14.1858 18.851 13.0857 18.9248 11.2917"
+                                    stroke="black" stroke-width="1.5" />
+                                <path d="M16.0747 8.41666H16.0843" stroke="black" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
                         <div>
                             <h6 class="mb-0">Balanço</h6>
                             <p class="mb-0">Mês passado</p>
+                            <p>R$ 2,543.00</p>
+                            <p class="text-light-color">R$ 2,986,07</p>
                         </div>
                     </div>
                 </div>
@@ -91,13 +116,17 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 23 23" fill="none">
-                                <path d="M4.89684 1.72931L3.88484 2.73987L5.39062 4.24493L6.40119 3.23437L4.89684 1.72931ZM18.1039 1.72931L16.5981 3.23437L17.6094 4.24493L19.1144 2.74059L18.1039 1.72931ZM11.5 2.17781C11.2628 2.17973 11.0232 2.19506 10.7812 2.22381H10.7597C7.84444 2.55803 5.52431 4.91337 5.12109 7.81568C4.79909 10.1516 5.76222 12.2698 7.36719 13.634C8.02361 14.1943 8.46765 14.9632 8.625 15.8118V20.1243H10.2637C10.5139 20.5534 10.9703 20.843 11.5 20.843C12.0297 20.843 12.4861 20.5534 12.7362 20.1243H14.375V17.2493H14.4426V16.3954C14.4426 15.3417 14.9902 14.2794 15.8801 13.4536C17.0703 12.2619 17.9688 10.5692 17.9688 8.625C17.9688 5.07437 15.0463 2.14475 11.5 2.17781ZM11.5 3.61531C14.278 3.5765 16.5312 5.85062 16.5312 8.625C16.5312 10.1301 15.8341 11.4554 14.8688 12.42L14.8918 12.443C13.9329 13.3279 13.3127 14.5195 13.138 15.8125H9.99422C9.83609 14.5806 9.30781 13.3882 8.30947 12.5328C7.03944 11.4547 6.28259 9.83034 6.53559 7.99609C6.84969 5.73203 8.68681 3.91143 10.9379 3.66203C11.1238 3.63625 11.311 3.62089 11.4986 3.61603L11.5 3.61531ZM1.4375 8.625V10.0625H3.59375V8.625H1.4375ZM19.4062 8.625V10.0625H21.5625V8.625H19.4062ZM5.39062 14.4426L3.88556 15.9469L4.89684 16.9582L6.40047 15.4531L5.39062 14.4426ZM17.6094 14.4426L16.5988 15.4531L18.1032 16.9582L19.1144 15.9469L17.6094 14.4426ZM10.0625 17.25H12.9375V18.6875H10.0625V17.25Z" fill="black" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 23 23"
+                                fill="none">
+                                <path
+                                    d="M4.89684 1.72931L3.88484 2.73987L5.39062 4.24493L6.40119 3.23437L4.89684 1.72931ZM18.1039 1.72931L16.5981 3.23437L17.6094 4.24493L19.1144 2.74059L18.1039 1.72931ZM11.5 2.17781C11.2628 2.17973 11.0232 2.19506 10.7812 2.22381H10.7597C7.84444 2.55803 5.52431 4.91337 5.12109 7.81568C4.79909 10.1516 5.76222 12.2698 7.36719 13.634C8.02361 14.1943 8.46765 14.9632 8.625 15.8118V20.1243H10.2637C10.5139 20.5534 10.9703 20.843 11.5 20.843C12.0297 20.843 12.4861 20.5534 12.7362 20.1243H14.375V17.2493H14.4426V16.3954C14.4426 15.3417 14.9902 14.2794 15.8801 13.4536C17.0703 12.2619 17.9688 10.5692 17.9688 8.625C17.9688 5.07437 15.0463 2.14475 11.5 2.17781ZM11.5 3.61531C14.278 3.5765 16.5312 5.85062 16.5312 8.625C16.5312 10.1301 15.8341 11.4554 14.8688 12.42L14.8918 12.443C13.9329 13.3279 13.3127 14.5195 13.138 15.8125H9.99422C9.83609 14.5806 9.30781 13.3882 8.30947 12.5328C7.03944 11.4547 6.28259 9.83034 6.53559 7.99609C6.84969 5.73203 8.68681 3.91143 10.9379 3.66203C11.1238 3.63625 11.311 3.62089 11.4986 3.61603L11.5 3.61531ZM1.4375 8.625V10.0625H3.59375V8.625H1.4375ZM19.4062 8.625V10.0625H21.5625V8.625H19.4062ZM5.39062 14.4426L3.88556 15.9469L4.89684 16.9582L6.40047 15.4531L5.39062 14.4426ZM17.6094 14.4426L16.5988 15.4531L18.1032 16.9582L19.1144 15.9469L17.6094 14.4426ZM10.0625 17.25H12.9375V18.6875H10.0625V17.25Z"
+                                    fill="black" />
                             </svg>
                         </div>
                         <div>
                             <h6 class="mb-0">Radar Financeiro</h6>
-                            <p class="fs-6 mb-0">Você está R$ 150 abaixo do seu limite para “Restaurantes”. Bom trabalho!</p>
+                            <p class="fs-6 mb-0">Você está R$ 150 abaixo do seu limite para “Restaurantes”. Bom
+                                trabalho!</p>
                         </div>
                     </div>
                 </div>
