adiciona card de grafico

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28"
                                 fill="none">
                                 <path
                                     d="M11.0996 9.37528H12.8246C13.2822 9.37528 13.7209 9.55702 14.0444 9.88054C14.368 10.204 14.5497 10.6428 14.5497 11.1003M11.0996 9.37528H9.37453C8.91702 9.37528 8.47824 9.55702 8.15473 9.88054C7.83122 10.204 7.64948 10.6428 7.64948 11.1003V11.6754C7.64948 12.1329 7.83122 12.5716 8.15473 12.8952C8.47824 13.2187 8.91702 13.4004 9.37453 13.4004H12.8246C13.2822 13.4004 13.7209 13.5822 14.0444 13.9057C14.368 14.2292 14.5497 14.668 14.5497 15.1255V15.7005C14.5497 16.158 14.368 16.5968 14.0444 16.9203C13.7209 17.2438 13.2822 17.4255 12.8246 17.4255H11.0996M11.0996 9.37528V7.65022M11.0996 17.4255H9.37453C8.91702 17.4255 8.47824 17.2438 8.15473 16.9203C7.83122 16.5968 7.64948 16.158 7.64948 15.7005M11.0996 17.4255V19.1506"
@@ -53,11 +53,13 @@
                                     stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <div>
+                        <div class="flex-grow-1">
                             <h6 class="mb-0">Receitas</h6>
                             <p class="mb-0">Mês passado</p>
-                            <p>R$ 8,023.00</p>
-                            <p class="text-light-color">R$ 8,723.29</p>
+                        </div>
+                        <div class="d-flex flex-column align-items-end">
+                            <span class="fw-bold">R$ 8,023.00</span>
+                            <span class="text-secondary">R$ 8,723.29</span>
                         </div>
                     </div>
                 </div>
@@ -65,7 +67,7 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 21"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 25 25"
                                 fill="none">
                                 <path
                                     d="M12.25 0.941667C11.6303 0.815167 10.9914 0.751278 10.3333 0.75C5.04046 0.75 0.75 5.04046 0.75 10.3333C0.75 15.6262 5.04046 19.9167 10.3333 19.9167C15.6262 19.9167 19.9167 15.6262 19.9167 10.3333C19.9154 9.67528 19.8515 9.03639 19.725 8.41667"
@@ -78,11 +80,13 @@
                                     stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <div>
+                        <div class="flex-grow-1">
                             <h6 class="mb-0">Despesas</h6>
                             <p class="mb-0">Mês passado</p>
-                            <p>R$ 5,480.00</p>
-                            <p class="text-light-color">R$ 5,736.59</p>
+                        </div>
+                        <div class="d-flex flex-column align-items-end">
+                            <span class="fw-bold">R$ 5,480.00</span>
+                            <span class="text-secondary">R$ 5,736.59</span>
                         </div>
                     </div>
                 </div>
@@ -90,7 +94,7 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 21 17"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                 fill="none">
                                 <path d="M4.58334 4.58334H8.41668" stroke="black" stroke-width="1.5"
                                     stroke-linecap="round" stroke-linejoin="round" />
@@ -104,11 +108,13 @@
                                     stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </div>
-                        <div>
+                        <div class="flex-grow-1">
                             <h6 class="mb-0">Balanço</h6>
                             <p class="mb-0">Mês passado</p>
-                            <p>R$ 2,543.00</p>
-                            <p class="text-light-color">R$ 2,986,07</p>
+                        </div>
+                        <div class="d-flex flex-column align-items-end">
+                            <span class="fw-bold">R$ 2,543.00</span>
+                            <span class="text-secondary">R$ 2,986,07</span>
                         </div>
                     </div>
                 </div>
@@ -116,19 +122,42 @@
                 <div class="col-12">
                     <div class="card rounded-5 p-3 d-flex flex-row align-items-center gap-3">
                         <div class="icon-bg d-flex align-items-center justify-content-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 23 23"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"
                                 fill="none">
                                 <path
                                     d="M4.89684 1.72931L3.88484 2.73987L5.39062 4.24493L6.40119 3.23437L4.89684 1.72931ZM18.1039 1.72931L16.5981 3.23437L17.6094 4.24493L19.1144 2.74059L18.1039 1.72931ZM11.5 2.17781C11.2628 2.17973 11.0232 2.19506 10.7812 2.22381H10.7597C7.84444 2.55803 5.52431 4.91337 5.12109 7.81568C4.79909 10.1516 5.76222 12.2698 7.36719 13.634C8.02361 14.1943 8.46765 14.9632 8.625 15.8118V20.1243H10.2637C10.5139 20.5534 10.9703 20.843 11.5 20.843C12.0297 20.843 12.4861 20.5534 12.7362 20.1243H14.375V17.2493H14.4426V16.3954C14.4426 15.3417 14.9902 14.2794 15.8801 13.4536C17.0703 12.2619 17.9688 10.5692 17.9688 8.625C17.9688 5.07437 15.0463 2.14475 11.5 2.17781ZM11.5 3.61531C14.278 3.5765 16.5312 5.85062 16.5312 8.625C16.5312 10.1301 15.8341 11.4554 14.8688 12.42L14.8918 12.443C13.9329 13.3279 13.3127 14.5195 13.138 15.8125H9.99422C9.83609 14.5806 9.30781 13.3882 8.30947 12.5328C7.03944 11.4547 6.28259 9.83034 6.53559 7.99609C6.84969 5.73203 8.68681 3.91143 10.9379 3.66203C11.1238 3.63625 11.311 3.62089 11.4986 3.61603L11.5 3.61531ZM1.4375 8.625V10.0625H3.59375V8.625H1.4375ZM19.4062 8.625V10.0625H21.5625V8.625H19.4062ZM5.39062 14.4426L3.88556 15.9469L4.89684 16.9582L6.40047 15.4531L5.39062 14.4426ZM17.6094 14.4426L16.5988 15.4531L18.1032 16.9582L19.1144 15.9469L17.6094 14.4426ZM10.0625 17.25H12.9375V18.6875H10.0625V17.25Z"
                                     fill="black" />
                             </svg>
                         </div>
-                        <div>
+                        <div class="flex-grow-1">
                             <h6 class="mb-0">Radar Financeiro</h6>
                             <p class="fs-6 mb-0">Você está R$ 150 abaixo do seu limite para “Restaurantes”. Bom
                                 trabalho!</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container bg-light-gray border rounded-5 p-4 mt-4">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h4 class="mb-0">Despesas por categoria</h4>
+                <a href="#" class="text-secondary text-decoration-none fw-semibold small">Ver mais</a>
+            </div>
+            <div class="row align-items-center g-3">
+                <div class="col-12 col-md-6 text-center">
+                    <img src="assets/Grafico.svg" class="img-fluid" width="350" style="max-width: 100%;">
+                </div>
+                <div class="col-12 col-md-6 d-flex flex-column align-items-start justify-content-center">
+                    <ul class="list-unstyled mb-0">
+                        <li class="d-flex align-items-center mb-2"><span class="legend-dot"
+                                style="background:#89BFFF;"></span> <span class="ms-2">Comida</span></li>
+                        <li class="d-flex align-items-center mb-2"><span class="legend-dot"
+                                style="background:#2369BA;"></span> <span class="ms-2">Moradia</span></li>
+                        <li class="d-flex align-items-center mb-2"><span class="legend-dot"
+                                style="background:#0277FF;"></span> <span class="ms-2">Entretenimento</span></li>
+                        <li class="d-flex align-items-center mb-2"><span class="legend-dot"
+                                style="background:#103B60;"></span> <span class="ms-2">Outros</span></li>
+                    </ul>
                 </div>
             </div>
     </main>
